--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.6.4",
-        "livewire/volt": "^1.7.0",
-        "robsontenorio/mary": "^2.4"
+        "livewire/volt": "^1.7.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
