--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
+        "@tailwindcss/vite": "^4.0.0",
         "autoprefixer": "^10.4.2",
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
-        "daisyui": "^4.12.14",
+        "daisyui": "^5.5.1-beta.2",
         "laravel-vite-plugin": "^2.0.0",
         "postcss": "^8.4.31",
-        "tailwindcss": "^3.4.18",
+        "tailwindcss": "^4.0.0",
         "vite": "^7.0.7"
     },
     "dependencies": {
